--- a/original-version.css
+++ b/original-version.css
@@ -33,7 +33,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    border-bottom: 3px solid #ff5e78; 
+    /* border-bottom: 3px solid #ff5e78;  */
+    margin-bottom: 30px;
+    margin-top: 30px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.7); 
 }
 
@@ -395,6 +397,4 @@ body {
     font-weight: 700;
     color: #8571ed;
 }
-
-
 
